# personal_INF

./: CMakeLists.txt  README.md  package.xml
10_November_2019/robot/: package.xml  readme
10_November_2019/robot/CannyLines/src/: CannyLine.h  MetaLine.cpp  MetaLine.h
10_November_2019/robot/behavior/: README.txt
10_November_2019/robot/behavior/src/: YoloClient.h  box_pose.cpp  create_hog_data.cpp  hog_detector.cpp  hog_detector.hpp  log_publisher.hpp  robot_behavior.cpp  robot_client_isolated.h  robot_measurement.hpp  ur_planning.cpp
10_November_2019/robot/behavior/src/mains/: hog.cpp  test_detection.cpp
10_November_2019/robot/binlock/: CMakeLists.txt
10_November_2019/robot/binlock/src/: main.cc
10_November_2019/robot/camera/src/: camera.cc  camera.h  gige_camera.cc  gige_camera.h
10_November_2019/robot/camera/src/_Common/: Common.h
10_November_2019/robot/camera/src/_Common_old/: Common.h
10_November_2019/robot/ign_protocol/proto/skoda_msgs/msgs/: CMakeLists.txt  errormsg.proto
10_November_2019/robot/launch/: nn_pose.sh  readme  ur10.launch  ur_behavior.sh  ur_behavior_init.sh  ur_really_behavior.sh  ur_sim_generic.launch  ur_sim_init.launch  ur_sim_make_data.launch
11_November_2019/robot/: CMakeLists.txt
11_November_2019/robot/CannyLines/: CMakeLists.txt
11_November_2019/robot/behavior/: CMakeLists.txt
11_November_2019/robot/behavior/src/: CMakeCache.txt  app_log.hpp  box_pose.hpp  convert_3d.hpp  create_hog_data.cpp  data_logger.hpp  descriptingVectorSave.yaml  error_catch.hpp  gui_sub.hpp  hog_detector.cpp  hog_detector.hpp  image_publisher.cpp  image_publisher.hpp  img_utilities.cpp  io.cpp  make_cam_pose_data.cpp  model_client.cpp  random_failure.cpp  random_failure.hpp  real_robot.cpp  robot_client.cc  rosout_check.cpp  sonar_listener.hpp  ur_planning.h
11_November_2019/robot/behavior/src/input/1/: robot_data.yaml
11_November_2019/robot/behavior/src/mains/: behavior.cpp
11_November_2019/robot/binlock/src/: binloc.cc  binloc.h
11_November_2019/robot/camera/: CMakeLists.txt
11_November_2019/robot/camera/src/_Common_old/: Common.cpp
11_November_2019/robot/ign_protocol/: CMakeLists.txt
11_November_2019/robot/ign_protocol/proto/skoda_msgs/msgs/: commandmsg.proto
11_November_2019/robot/launch/: moveit_rviz.launch  nn_occlusion.sh  setup_env.sh  ur10_moveit_planning_execution.launch  ur_planner.sh  ur_sim.launch
11_November_2019/robot/msgs/: messages.proto
dustbin/: YoloClient1.cc  YoloServer1.py
msg/: BoundingBox.msg
robot/: CMakeLists.txt  package.xml  readme
robot/CannyLines/src/: CannyLine.cpp
robot/behavior/: CMakeLists.txt
robot/behavior/src/: YoloClient.h  convert_3d.cpp  create_hog_data.cpp  hog_detector.cpp  hog_detector.hpp  img_utilities.hpp  io.hpp  make_cam_pose_data.cpp  make_cam_pose_data.hpp  model_client.cpp  model_client.hpp  real_robot.cpp  real_robot.hpp  robot_behavior.cpp  robot_behavior.hpp  robot_client.h  robot_interface.hpp  robot_measurement.cpp  rosout_check.hpp  skoda_publisher.cpp  skoda_publisher.hpp  sonar_listener.hpp  ur_planning.cpp  utilities.hpp
robot/behavior/src/mains/: behavior.cpp  hog.cpp
robot/behavior/test/: convert_3d.cpp
robot/camera/: CMakeLists.txt
robot/camera/src/: camera.cc  gige_camera.cc  gige_camera.h
robot/ign_protocol/: README.rst
robot/ign_protocol/proto/skoda_msgs/msgs/: statusmsg.proto
robot/ign_protocol/src/: fake_core.cpp
robot/launch/: hog.launch  move_group.launch  ompl_planning_pipeline.launch.xml  real_ur10_moveit_planning_execution.launch  test_detection.launch  ur_driver.sh  ur_sim.launch
robot/msgs/: CMakeLists.txt
script/: YoloServer.py  YoloServerTmp.py  model_test_0.py  model_test_1.py  model_test_2.py  model_test_3.py  model_test_4.py  yoloDetector.py  yoloDetectorClass.py  yoloSERVER.py  yoloServer.py
src/: YoloClient.cc  YoloClientTmp.cc  demo_test.cc  listener_.cpp  pylon_class.cc  pylon_class.h  talker_.cpp  talker_test.cpp  talker_test_0.cpp  talker_test_1.cpp  talker_test_2.cpp  yoloCLIENT.cc  yoloCLIENTNEW.cc  yoloDetection.cpp  yoloRequest.cpp
srv/: CheckForObjects.srv  YoloDetection.srv
